# nft-reserve

./: Anchor.toml  README.md  package-lock.json  package.json
app/nft-reserve/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/nft-reserve/public/: index.html  reserve_idl.json
app/nft-reserve/src/: App.vue
app/nft-reserve/src/common/web3/: NFTget.ts
app/nft-reserve/src/components/: ArrowButton.vue  ConfigPane.vue  InitReserve.vue  Modal.vue  NavBar.vue  NavButton.vue  NftGrid.vue  TestMint.vue  TheNavBar.vue  UpdateWhitelist.vue
app/nft-reserve/src/composables/: cluster.ts  wallet.ts
app/nft-reserve/src/lib/: constants.ts  nft_reserve_type.ts  reserve.ts  utils.ts
app/nft-reserve/src/router/: index.ts
app/nft-reserve/src/views/: Admin.vue  CreateReserve.vue  Home.vue  ManageReserve.vue  User.vue
programs/nft-reserve/: Cargo.toml
programs/nft-reserve/src/: lib.rs
programs/nft-reserve/src/errors/: errors.rs
programs/nft-reserve/src/instructions/: add_to_whitelist.rs  fund_reserve.rs  init_reserve.rs  mod.rs  redeem_nft.rs  remove_from_whitelist.rs  set_whitelist.rs
programs/nft-reserve/src/state/: mod.rs  reserve.rs  whitelist.rs  whitelist_proof.rs
scripts/: after_anchor_build.sh
tests/: nft-reserve.ts
