[package]
name = "nft-reserve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_reserve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.22.1", features = ["init-if-needed"] }
anchor-spl = "0.22.1"
solana-program = "1.9.5"
bitflags = "1.3.2"
solana-safe-math = "0.1.0"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
